[package]
name = "dcache"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
clap = { version = "4.5.27", features = ["cargo"] }
http-body-util = "0.1"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }